[gd_scene load_steps=54 format=2]

[ext_resource path="res://scripts/enemy_ship.gd" type="Script" id=1]
[ext_resource path="res://resources/enemyshipshader.tres" type="Shader" id=2]
[ext_resource path="res://assets/Images/boss/enemy_sideview_0.2_big1.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/boss/enemy_sideview_0.2_big2.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/boss/enemy_sideview_0.2_big3.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/boss/enemy_sideview_0.2_big4.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/boss/enemy_sideview_0.2_big5.png" type="Texture" id=7]
[ext_resource path="res://assets/Images/boss/enemy_sideview_0.2_big6.png" type="Texture" id=8]
[ext_resource path="res://assets/Sounds/enemy_explosion.wav" type="AudioStream" id=9]
[ext_resource path="res://resources/redblueshader.tres" type="Shader" id=10]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big1.png" type="Texture" id=11]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big2.png" type="Texture" id=12]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big3.png" type="Texture" id=13]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big4.png" type="Texture" id=14]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big5.png" type="Texture" id=15]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big6.png" type="Texture" id=16]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big7.png" type="Texture" id=17]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big8.png" type="Texture" id=18]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big9.png" type="Texture" id=19]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big10.png" type="Texture" id=20]
[ext_resource path="res://assets/Images/explosion_blue/enemy_explosion_blue_big11.png" type="Texture" id=21]
[ext_resource path="res://assets/Images/laser/laser_blue_big1.png" type="Texture" id=22]
[ext_resource path="res://assets/Images/laser/laser_blue_big2.png" type="Texture" id=23]
[ext_resource path="res://assets/Images/laser/laser_blue_big3.png" type="Texture" id=24]
[ext_resource path="res://assets/Images/laser/laser_blue_big4.png" type="Texture" id=25]
[ext_resource path="res://assets/Images/laser/laser_blue_big5.png" type="Texture" id=26]
[ext_resource path="res://assets/Images/laser/laser_blue_big6.png" type="Texture" id=27]
[ext_resource path="res://assets/Images/laser/laser_blue_big7.png" type="Texture" id=28]
[ext_resource path="res://assets/Images/laser/laser_blue_big8.png" type="Texture" id=29]
[ext_resource path="res://assets/Images/laser/laser_blue_big9.png" type="Texture" id=30]
[ext_resource path="res://assets/Images/laser/laser_blue_big10.png" type="Texture" id=31]
[ext_resource path="res://assets/Images/laser/laser_blue_big11.png" type="Texture" id=32]
[ext_resource path="res://assets/Images/laser/laser_blue_big12.png" type="Texture" id=33]
[ext_resource path="res://assets/Images/laser/laser_blue_big13.png" type="Texture" id=34]
[ext_resource path="res://assets/Images/laser/laser_blue_big14.png" type="Texture" id=35]
[ext_resource path="res://assets/Images/laser/laser_blue_big15.png" type="Texture" id=36]
[ext_resource path="res://assets/Images/laser/laser_blue_big16.png" type="Texture" id=37]
[ext_resource path="res://assets/Images/laser/laser_blue_big17.png" type="Texture" id=38]
[ext_resource path="res://assets/Images/laser/laser_blue_big18.png" type="Texture" id=39]
[ext_resource path="res://assets/Images/laser/laser_blue_big19.png" type="Texture" id=40]
[ext_resource path="res://assets/Images/laser/laser_blue_big20.png" type="Texture" id=41]
[ext_resource path="res://scripts/laser.gd" type="Script" id=42]
[ext_resource path="res://assets/Sounds/enemy_laser.wav" type="AudioStream" id=43]
[ext_resource path="res://assets/Sounds/explosion.wav" type="AudioStream" id=44]
[ext_resource path="res://assets/Sounds/sine.wav" type="AudioStream" id=45]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0
shader = ExtResource( 2 )
shader_param/x = null
shader_param/hidden = true
_sections_unfolded = [ "shader_param" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=3]

render_priority = 0
shader = ExtResource( 10 )
shader_param/x = null

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=5]

length = 0.7
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=6]

length = 1.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("laser:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45, 1.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 7, 14, 19 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("laser")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 1.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "retract"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("laser")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "explode"
} ]
}

[sub_resource type="ShaderMaterial" id=7]

render_priority = 0
shader = ExtResource( 10 )
shader_param/x = null

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="enemy_ship" type="Area2D"]

scale = Vector2( 0.8, 0.8 )
z = 1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="."]

visible = false
build_mode = 0
polygon = PoolVector2Array( -182.673, -3.23584, -114.2, -145.733, 202.255, -138.331, 124.53, 209.585, -162.316, 131.859 )
__meta__ = {
"_edit_lock_": true
}

[node name="shoot_from" type="Position2D" parent="."]

position = Vector2( -86.9791, 74.1617 )

[node name="frames" type="AnimatedSprite" parent="."]

material = SubResource( 1 )
position = Vector2( -3.54698, 3.85551 )
scale = Vector2( 0.65831, 0.65831 )
frames = SubResource( 2 )
animation = "default"
frame = 5
playing = true
_sections_unfolded = [ "Material" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sound_explosion" type="AudioStreamPlayer2D" parent="."]

stream = ExtResource( 9 )
volume_db = -1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="explosion" type="AnimatedSprite" parent="."]

visible = false
material = SubResource( 3 )
scale = Vector2( 0.53, 0.53 )
frames = SubResource( 4 )
animation = "default"
frame = 10
_sections_unfolded = [ "Material" ]
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/explosion = SubResource( 5 )
anims/laser = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options" ]

[node name="shooting" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = true

[node name="centroid" type="Position2D" parent="."]

[node name="laser" type="AnimatedSprite" parent="."]

visible = false
light_mask = 2
material = SubResource( 7 )
position = Vector2( -101.597, 70.4751 )
frames = SubResource( 8 )
animation = "default"
frame = 19
centered = false
offset = Vector2( -3557.68, -87.0475 )
script = ExtResource( 42 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="position" type="Position2D" parent="laser"]

position = Vector2( 12.2495, -0.98262 )
__meta__ = {
"_edit_lock_": true
}

[node name="area" type="Area2D" parent="laser"]

position = Vector2( -2996.48, -98.3673 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision" type="CollisionPolygon2D" parent="laser/area"]

visible = false
build_mode = 0
polygon = PoolVector2Array( 3008.14, 89.861, 2902.4, 162.869, -561.82, 162.869, -561.82, 36.9929, 2890.91, 44.5454 )

[node name="sound_laser" type="AudioStreamPlayer2D" parent="laser"]

stream = ExtResource( 43 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Pause" ]

[node name="sound_laser_hit" type="AudioStreamPlayer2D" parent="laser"]

stream = ExtResource( 44 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="lost_life" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -33.0
margin_top = -235.0
margin_right = 45.0
margin_bottom = -208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.988281, 0.98056, 0.98056, 1 )
custom_colors/font_color_shadow = Color( 0.00709534, 0.0182716, 0.121094, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="reaction_window" type="Timer" parent="."]

process_mode = 1
wait_time = 0.45
one_shot = true
autostart = false

[node name="end_attack" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="sound_enemy_engine" type="AudioStreamPlayer2D" parent="."]

stream = ExtResource( 45 )
volume_db = -20.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="animation_finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="timeout" from="shooting" to="." method="_on_shooting_timeout"]

[connection signal="timeout" from="reaction_window" to="." method="_on_reaction_window_timeout"]

[connection signal="timeout" from="end_attack" to="." method="_on_end_attack_timeout"]


